--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,72 @@
 body {
-    background: white;
+    background-color: whitesmoke;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+header {
+   
+}
+
+h1 {
+    font-weight: 800;
+    font-size: 34px;
+    line-height: 1.5;
+    text-align: center;
+}
+
+form {
+    padding: 30px;
+    background-color: aliceblue;
+    border-radius: 25px;
+    display: flex;
+    box-shadow: 10px 5px 5px lightslategray;
+    margin-bottom: 30px;
+}
+
+main {
+    margin-bottom: 20px;
+}
+
+footer {
+    text-align: center;
+    margin-top: 20px;   
+}
+
+a {
+    color: blueviolet;
+}
+
+.container {
+    margin: 120px auto;
+    max-width: 600px;
+}  
+
+.ai-instructions {
+    padding: 14px;
+    border: 1px solid gray;
+    width: 80%;
+    font-size: 15px;
+    border-radius: 16px;
+    line-height: 1.5;
+}
+
+.submit-button {
+    margin-left: 12px;
+    background-color: blueviolet;
+    color: white;
+    border: none;
+    border-radius: 16px;
+    padding: 12px;
+    width: 100px;
+    padding: 12px 20px;
+}
+
+.ai-poem {
+    font-size: 16px;
+    background-color: aliceblue;
+    padding: 20px;
+    line-height: 2;
+    border-left: 3px solid blueviolet;
+    box-shadow: 10px 5px 5px lightslategray;
+    border-radius: 1px;
 }
