--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: whitesmoke;
+    background-color: #F9F7FE;
     font-family: 'Courier New', Courier, monospace;
 }
 
 header {
-   
+   margin-bottom: 30px;
 }
 
 h1 {
@@ -14,36 +14,48 @@ h1 {
     text-align: center;
 }
 
-form {
-    padding: 30px;
-    background-color: aliceblue;
-    border-radius: 25px;
-    display: flex;
-    box-shadow: 10px 5px 5px lightslategray;
-    margin-bottom: 30px;
-}
 
+.form-container {
+    background-color: #FFFFFF;
+    margin-bottom: 30px;
+    border-radius: 25px;
+    padding: 30px 20px;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.7);
+}
+form {
+    display: flex;
+}
+.hint {
+    line-height: 1.5;
+    margin-top: 10px;
+    opacity: 0.8;
+    font-size: 12px;
+    margin-left: 5px;
+}
 main {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 footer {
     text-align: center;
-    margin-top: 20px;   
+    font-size: 13px;
 }
 
-a {
+a {       
     color: blueviolet;
 }
+
 
 .container {
     margin: 120px auto;
     max-width: 600px;
+    margin-bottom: 20px;
 }  
+
 
 .ai-instructions {
     padding: 14px;
-    border: 1px solid gray;
+    border: 1px solid rgba(39, 33, 66, 0.5);
     width: 80%;
     font-size: 15px;
     border-radius: 16px;
@@ -61,12 +73,30 @@ a {
     padding: 12px 20px;
 }
 
-.ai-poem {
+.poem {
     font-size: 16px;
-    background-color: aliceblue;
-    padding: 20px;
+    background-color: #FFFFFF;
+    padding: 20px 20px 7px;
     line-height: 2;
     border-left: 3px solid blueviolet;
-    box-shadow: 10px 5px 5px lightslategray;
     border-radius: 1px;
 }
+
+.hidden { 
+    display: none;
+}
+
+.generating {
+    animation: blink-animation 1s steps(5, start);
+  }
+  
+ @keyframes blink-animation {
+    to {
+        visibility: hidden;
+      }
+  }
+  @-webkit-keyframes blink-animation {
+    to {
+      visibility: hidden;
+    }
+  }
