--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #F9F7FE;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Cerebri Sans", Helvetica, Arial, sans-serif
 }
 
 header {
@@ -18,9 +18,9 @@ h1 {
 .form-container {
     background-color: #FFFFFF;
     margin-bottom: 30px;
-    border-radius: 25px;
+    border-radius: 10px;
     padding: 30px 20px;
-    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.7);
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.6);
 }
 form {
     display: flex;
@@ -38,7 +38,7 @@ main {
 
 footer {
     text-align: center;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 a {       
@@ -58,7 +58,7 @@ a {
     border: 1px solid rgba(39, 33, 66, 0.5);
     width: 80%;
     font-size: 15px;
-    border-radius: 16px;
+    border-radius: 12px;
     line-height: 1.5;
 }
 
